[package]
name = "tide-acme"
version = "0.1.1"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
description = "Automatic HTTPS certificates for Tide, via Let's Encrypt and ACME tls-alpn-01 challenges"
keywords = ["acme", "autocert", "https", "tls", "alpn"]
edition = "2018"
repository = "https://github.com/http-rs/tide-acme"
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.48"
rustls-acme = "0.1.6"
tide-rustls = { git = "https://github.com/halvko/tide-rustls" }

[dev-dependencies]
tide = "0.17.0-beta.1"
